Make quirks-mode vertical alignment correctly consider only non-collapsed whitespace.  b=155333  r+sr=roc